--- a/template.html
+++ b/template.html
@@ -1,10 +1,13 @@
 <html>
-  <head> 
-			<title>Procon28 Krystal</title>
-			<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-			<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  </head>
-  <body>
-      <div id="root"></div>
-  </body>
+
+<head>
+  <title>Web出席簿</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
