--- a/template.html
+++ b/template.html
@@ -1,11 +1,9 @@
 <html>
+  <head>
+    <title>Web出席簿</title>
+  </head>
 
-<head>
-  <title>Web出席簿</title>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+  <body style="margin: 0px">
+    <div id="root" />
+  </body>
 </html>
