--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
     <title>Web出席簿</title>
   </head>
 
-  <body style="margin: 0px">
+  <body style="margin: 0px;">
     <div id="root" />
   </body>
-</html>
+</html>;
